--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <link rel="stylesheet" href="./css/styles.css" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
+    <link rel="stylesheet" href="./css/styles.css" >
     <link rel="preconnect" href="https://fonts.googleapis.com" >
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <link
@@ -15,6 +15,7 @@
   </head>
 
   <body>
+    <div class="container"> 
     <header class="hedader">
       <nav class="menu">
       <a class="menu-link" href="./index.html"
@@ -48,13 +49,17 @@
         </ul>
       </address>
     </header>
-
-    <main>
+    </div>
+    
+      <main>
+      <div class="container"> 
       <section class="banner">
         <h1 class="banner-title">Effective Solutions for Your Business</h1>
         <button class="banner-button" type="button">Order Service</button>
       </section>
+      </div>
 
+      <div class="container"> 
       <section class="soft-skills">
         <h2>Soft Skills</h2>
         <ul class="soft-skills-list">
@@ -88,7 +93,9 @@
           </li>
         </ul>
       </section>
+      </div>
 
+      <div class="container"> 
       <section class="team">
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
@@ -134,7 +141,9 @@
           </li>
         </ul>
       </section>
+      </div>
 
+      <div class="container"> 
       <section class="portfolio">
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio-list">
@@ -200,8 +209,10 @@
           </li>
         </ul>
       </section>
-    </main>
+      </div>
+      </main>
 
+    <div class="container"> 
     <footer class="down">
       <a class="down-link" href="./index.html"
         >Web <span class="down-link-studio">Studio</span></a
@@ -211,5 +222,6 @@
         marketing & growth solutions.
       </p>
     </footer>
+    </div>
   </body>
 </html>
